README and Setup scripts
* Add a README (as I understand it)
* Update the database user in database.yml to a suitable default
* Add script to create the database user as above

--- a/config/database.yml
+++ b/config/database.yml
@@ -27,15 +27,15 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: myapp_development
+  database: toyrobot_development
   pool: 5
-  username: katherinafatiguso
+  username: toyrobotuser
   password:
 
 test:
   adapter: postgresql
   encoding: unicode
-  database: myapp_test
+  database: toyrobot_test
   pool: 5
-  username: katherinafatiguso
-  password: 
+  username: toyrobotuser
+  password:
